<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchMovieActivity"
    android:background="@color/purple_200">

    <LinearLayout
        android:id="@+id/searchBar"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/movieNameTxtField"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_a_movie_name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            android:importantForAutofill="no" />

        <android.widget.Button
            android:id="@+id/searchActionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_final"
            android:text="@string/retrieve_movie"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/searchMovieActor"
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/sMovieNameDisplayTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="35dp"
                android:fontFamily="monospace"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <android.widget.Button
        android:textColor="@color/white"
        android:id="@+id/saveMovieToDbBtn"
        android:layout_width="220dp"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:text="@string/save_movie_to_database"
        android:background="@drawable/btn_final"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchMovieActor" />

</androidx.constraintlayout.widget.ConstraintLayout>